--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
 		<artifactId>jsoup</artifactId>
 		<version>1.8.3</version>
 	</dependency>
+		
+	<dependency>
+   	       <groupId>postgresql</groupId>
+   	       <artifactId>postgresql</artifactId>
+               <version>9.1-901-1.jdbc4</version>
+ 	</dependency>
 
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
